--- a/PitBoss/UserControls/GunBattery_UserControl.xaml
+++ b/PitBoss/UserControls/GunBattery_UserControl.xaml
@@ -16,11 +16,11 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="{DynamicResource groupbox_coordinates_header}">
             <StackPanel Margin="3,3,3,3">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock MinWidth="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="{DynamicResource textbolck_tooltip_distance}" Text="{DynamicResource textbolck_distance}"/>
+                    <TextBlock MinWidth="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="{DynamicResource textblock_tooltip_distance}" Text="{DynamicResource textblock_distance}"/>
                     <TextBox x:Name="Dist_TextBox" Text="{Binding Path=LatestDist, StringFormat=F1}" IsReadOnly="True" FontSize="20"  Width="75" Margin="5,5,5,5"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock MinWidth="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="{DynamicResource textbolck_tooltip_azimut}" Text="{DynamicResource textbolck_azimut}"/>
+                    <TextBlock MinWidth="40" Margin="5,5,5,5" FontSize="20" VerticalAlignment="Center" ToolTip="{DynamicResource textblock_tooltip_azimuth}" Text="{DynamicResource textblock_azimuth}"/>
                     <TextBox x:Name="Az_TextBox" Text="{Binding Path=LatestAz, StringFormat=F1}" IsReadOnly="True" FontSize="20" Width="75" Margin="5,5,5,5"/>
                 </StackPanel>
             </StackPanel>
