Adds UDP serverreport functionality. Adds connected users to connections options.

--- a/PitBoss/UserControls/ConnectionsUserControl.xaml
+++ b/PitBoss/UserControls/ConnectionsUserControl.xaml
@@ -10,6 +10,10 @@
         <GroupBox Grid.Row="0" Grid.Column="0" Header="{DynamicResource groupbox_connection_header}">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="My callsign: " VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,5,5,5"/>
+                    <TextBox x:Name="MyCallsign_Textbox" Text="{Binding MyCallsign}" Height="25" Width="155" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,5,5,5"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5,0,5,0">
                     <TextBlock Text="{DynamicResource user_role_header}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <RadioButton x:Name="gunnerMode_RadioButton" GroupName="operatingModesRadioGroup" IsChecked="True" Content="{DynamicResource user_role_gunner}" Margin="5,5,5,5"/>
                     <RadioButton x:Name="spotterMode_RadioButton" GroupName="operatingModesRadioGroup" Content="{DynamicResource user_role_spotter}" Margin="5,5,5,5"/>
@@ -32,8 +36,14 @@
                     </StackPanel>
                     <Button x:Name="CopyIp_Button" Content="{DynamicResource button_copy}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="CopyIp_Button_Click" Margin="5,5,5,5"/>
                 </StackPanel>
-            </StackPanel>
+                <DataGrid x:Name="ActiveUsers_DataGrid" MaxHeight="400" MinHeight="100" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" IsReadOnly="True">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding}" Header="Callsign"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
+            </StackPanel>
+            
         </GroupBox>
     </Grid>
 </UserControl>
