--- a/PitBoss/MainWindow.xaml
+++ b/PitBoss/MainWindow.xaml
@@ -34,11 +34,11 @@
                 <MenuItem x:Name="Russian_MenuItem" Header="Русский" Click="Language_MenuItem_Click"/>
                 <MenuItem x:Name="Spanish_MenuItem" Header="Español" Click="Language_MenuItem_Click"/>
                 <Separator/>
-                <MenuItem x:Name="SaveSelectedLanguage_MenuItem">
+                <MenuItem x:Name="SaveSelectedLanguage_MenuItem" IsCheckable="True" IsChecked="{Binding Path=SaveSelectedLanguage}">
                     <MenuItem.Header>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{DynamicResource menu_language_turn}" VerticalAlignment="Center" Margin="3"/>
-                            <CheckBox x:Name="SaveSelectedLanguage_CheckBox" VerticalAlignment="Center" Checked="SaveSelectedLanguage_CheckBox_Changed" Unchecked="SaveSelectedLanguage_CheckBox_Changed"/>
+                           <!-- <CheckBox x:Name="SaveSelectedLanguage_CheckBox" VerticalAlignment="Center" IsChecked="{Binding Path=SaveSelectedLanguage}"/> -->
                         </StackPanel>
                     </MenuItem.Header>
                 </MenuItem>
