--- a/PitBoss/Rescources/English.xaml
+++ b/PitBoss/Rescources/English.xaml
@@ -54,7 +54,7 @@
     <system:String x:Key="textbox_server_ip_tooltip">ex: 192.168.0.1</system:String>
     <system:String x:Key="button_connect">Connect to Server</system:String>
     <system:String x:Key="button_start">Start as Server</system:String>
-    <system:String x:Key="textblock_user_ip">Your IP Address:</system:String>
+    <system:String x:Key="textblock_user_ip">My IP Address:</system:String>
     <system:String x:Key="button_copy">Copy IP Address</system:String>
     
     <!--Options-->
