Adds user selectable overlay background color and alert color.

--- a/PitBoss/Rescources/English.xaml
+++ b/PitBoss/Rescources/English.xaml
@@ -62,9 +62,11 @@
     <system:String x:Key="groupbox_overlay_header">Overlay Settings</system:String>
     <system:String x:Key="button_toggle">Toggle Overlay</system:String>
     <system:String x:Key="textblock_opacity">Opacity:</system:String>
-    <system:String x:Key="textblock_label_color">Lable Color:</system:String>
+    <system:String x:Key="textblock_overlayBackground_color">Background Color:</system:String>
+    <system:String x:Key="textblock_label_color">Label Color:</system:String>
     <system:String x:Key="textblock_value_color">Value Color:</system:String>
     <system:String x:Key="textblock_overlay_color">Overlay Color:</system:String>
+    <system:String x:Key="textblock_overlayAlert_color">Alert Color:</system:String>
     <system:String x:Key="comboboxitem_color_red">Red</system:String>
     <system:String x:Key="comboboxitem_color_orange">Orange</system:String>
     <system:String x:Key="comboboxitem_color_yellow">Yellow</system:String>
