--- a/DakkaDataLink/Rescources/German.xaml
+++ b/DakkaDataLink/Rescources/German.xaml
@@ -56,9 +56,11 @@
     <system:String x:Key="groupbox_overlay_header">Overlayeinstellungen</system:String>
     <system:String x:Key="button_toggle">Overlay An/Aus</system:String>
     <system:String x:Key="textblock_opacity">Deckkraft:</system:String>
+    <system:String x:Key="textblock_overlayBackground_color">*Background Color:</system:String>
     <system:String x:Key="textblock_label_color">Textfarbe:</system:String>
     <system:String x:Key="textblock_value_color">Zahlenfarbe:</system:String>
     <system:String x:Key="textblock_overlay_color">Überlagerungsfarbe:</system:String>
+    <system:String x:Key="textblock_overlayAlert_color">*Alert Color:</system:String>
     <system:String x:Key="comboboxitem_color_red">Rot</system:String>
     <system:String x:Key="comboboxitem_color_orange">Orange</system:String>
     <system:String x:Key="comboboxitem_color_yellow">Gelb</system:String>
