--- a/DakkaDataLink/Rescources/Russian.xaml
+++ b/DakkaDataLink/Rescources/Russian.xaml
@@ -55,6 +55,8 @@
     <system:String x:Key="groupbox_overlay_header">Настройки оверлея</system:String>
     <system:String x:Key="button_toggle">Переключить оверлей</system:String>
     <system:String x:Key="textblock_opacity">Прозрачность:</system:String>
+    <system:String x:Key="textblock_overlayBackground_color">*Background Color:</system:String>
+    <system:String x:Key="textblock_overlayAlert_color">*Alert Color:</system:String>
     <system:String x:Key="textblock_label_color">Цвет метки:</system:String>
     <system:String x:Key="textblock_value_color">Цвет значения:</system:String>
     <system:String x:Key="textblock_overlay_color">Цвет наложения:</system:String>
