Updates Polish translations.

--- a/DakkaDataLink/Rescources/Polish.xaml
+++ b/DakkaDataLink/Rescources/Polish.xaml
@@ -26,6 +26,8 @@
 
     <!--Gunner and Spotter-->
     <system:String x:Key="groupbox_coordinates_header">Współrzędne ostrzału</system:String>
+    <!-- <system:String x:Key="previous_coordinates_text">poprzednie koordynaty</system:String> plug this in. -->
+    <!-- <system:String x:Key="saved_coordinates_text">zapisane koordynaty</system:String> plug this in. -->
     <system:String x:Key="textblock_distance">Dystans:</system:String>
     <system:String x:Key="textblock_tooltip_distance">Odległość</system:String>
     <system:String x:Key="textbox_tooltip_distance">Ctrl prawy + Strzałka w górę/dół, aby zmienić o 1 krok. Shift prawy + Strzałka w górę/dół, aby zmienić o 3 kroki.</system:String>
@@ -55,11 +57,11 @@
     <system:String x:Key="groupbox_overlay_header">Ustawienia nakładki</system:String>
     <system:String x:Key="button_toggle">Przełącz nakładkę</system:String>
     <system:String x:Key="textblock_opacity">Przezroczystość:</system:String>
-    <system:String x:Key="textblock_overlayBackground_color">*Background Color:</system:String>
+    <system:String x:Key="textblock_overlayBackground_color">Kolor tła:</system:String>
     <system:String x:Key="textblock_label_color">Kolor etykiety:</system:String>
     <system:String x:Key="textblock_value_color">Kolor wartości:</system:String>
     <system:String x:Key="textblock_overlay_color">Kolor nakładki:</system:String>
-    <system:String x:Key="textblock_overlayAlert_color">*Alert Color:</system:String>
+    <system:String x:Key="textblock_overlayAlert_color">Kolor alertu:</system:String>
     <system:String x:Key="comboboxitem_color_red">Czerwony</system:String>
     <system:String x:Key="comboboxitem_color_orange">Pomarańczowy</system:String>
     <system:String x:Key="comboboxitem_color_yellow">Żółty</system:String>
