--- a/DakkaDataLink/Rescources/Russian.xaml
+++ b/DakkaDataLink/Rescources/Russian.xaml
@@ -19,7 +19,7 @@
 
     <!--About Window-->
     <system:String x:Key="textblock_description">Инструмент координации артиллерии Foxhole, 2024.</system:String>
-    <system:String x:Key="textblock_author">Автор: [82DK-A] Witch,PhD</system:String>
+    <system:String x:Key="textblock_author">Автор: [82DK-A|⦿] Witch,PhD</system:String>
     <system:String x:Key="textblock_contributors">Участники:</system:String>
     <system:String x:Key="textblock_version">Версия:</system:String>
     <system:String x:Key="textblock_translators">Переводчики:</system:String>
