--- a/DakkaDataLink/AboutWindow.xaml
+++ b/DakkaDataLink/AboutWindow.xaml
@@ -16,6 +16,7 @@
         <TextBlock Text="[82DK-A] Huners"/>
         <TextBlock Text="[82DK-☆] Ugo"/>
         <TextBlock Text="[82DK-☆] Valkyrjar ♡"/>
+        <TextBlock Text="[82DK-☆] Cerber"/>
         <TextBox Width="220" HorizontalAlignment="Left" IsReadOnly="True" Margin="0,10,0,5">
             https://github.com/Witch-PhD/PitBoss
         </TextBox>
