--- a/DakkaDataLink/Rescources/English.xaml
+++ b/DakkaDataLink/Rescources/English.xaml
@@ -19,7 +19,7 @@
     
     <!--About Window-->
     <system:String x:Key="textblock_description">A Foxhole artillery coordination tool, 2024.</system:String>
-    <system:String x:Key="textblock_author">Written by [82DK-A] Witch,PhD</system:String>
+    <system:String x:Key="textblock_author">Written by [82DK-A|⦿] Witch,PhD</system:String>
     <system:String x:Key="textblock_contributors">Contributors:</system:String>
     <system:String x:Key="textblock_version">Version:</system:String>
     <system:String x:Key="textblock_translators">Translators:</system:String>
