--- a/DakkaDataLink/Rescources/Italian.xaml
+++ b/DakkaDataLink/Rescources/Italian.xaml
@@ -19,7 +19,7 @@
     
     <!--About Window-->
     <system:String x:Key="textblock_description">Uno strumento per il coordinamento dell'artiglieria su Foxhole, 2024.</system:String>
-    <system:String x:Key="textblock_author">Fatto da [82DK-A] Witch,PhD</system:String>
+    <system:String x:Key="textblock_author">Fatto da [82DK-A|⦿] Witch,PhD</system:String>
     <system:String x:Key="textblock_contributors">Collaboratori:</system:String>
     <system:String x:Key="textblock_version">Versione:</system:String>
     <system:String x:Key="textblock_translators">Traduttori:</system:String>
