--- a/DakkaDataLink/Rescources/Spanish.xaml
+++ b/DakkaDataLink/Rescources/Spanish.xaml
@@ -19,7 +19,7 @@
 
     <!--About Window-->
     <system:String x:Key="textblock_description">Una herramienta de coordinación de artillería para Foxhole, 2024.</system:String>
-    <system:String x:Key="textblock_author">Escrito por [82DK-A] Witch, PhD</system:String>
+    <system:String x:Key="textblock_author">Escrito por [82DK-A|⦿] Witch, PhD</system:String>
     <system:String x:Key="textblock_contributors">Colaboradores:</system:String>
     <system:String x:Key="textblock_version">Versión:</system:String>
     <system:String x:Key="textblock_translators">Traductores:</system:String>
