--- a/DakkaDataLink/UserControls/UserOptions_UserControl.xaml
+++ b/DakkaDataLink/UserControls/UserOptions_UserControl.xaml
@@ -40,20 +40,20 @@
                 <StackPanel Grid.Row="0" Grid.Column="1">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock MinWidth="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="{DynamicResource textblock_overlayBackground_color}"/>
-                        <ComboBox x:Name="OverlayBackgroundColor_ComboBox" SelectedValuePath="Tag" SelectedValue="{Binding Path=userOptions.OverlayBackgroundColor}" SelectionChanged="OverlayBackgroundColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
+                        <ComboBox x:Name="OverlayBackgroundColor_ComboBox" SelectedValuePath="Tag" DisplayMemberPath="Content" SelectionChanged="OverlayBackgroundColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock MinWidth="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="{DynamicResource textblock_overlayAlert_color}"/>
-                        <ComboBox x:Name="OverlayAlertColor_ComboBox" SelectedValuePath="Tag" SelectedValue="{Binding Path=userOptions.OverlayAlertBorderColor}" SelectionChanged="OverlayAlertColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
+                        <ComboBox x:Name="OverlayAlertColor_ComboBox" SelectedValuePath="Tag" DisplayMemberPath="Content" SelectionChanged="OverlayAlertColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock MinWidth="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="{DynamicResource textblock_label_color}"/>
-                        <ComboBox x:Name="LabelColor_ComboBox" SelectedValuePath="Tag" SelectedValue="{Binding Path=userOptions.OverlayLabelsFontColor}" Margin="3,3,3,3" IsEnabled="False"/>
+                        <ComboBox x:Name="LabelColor_ComboBox" SelectedValuePath="Tag" DisplayMemberPath="Content" SelectionChanged="LabelColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock MinWidth="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="{DynamicResource textblock_value_color}"/>
-                        <ComboBox x:Name="ValueColor_ComboBox" SelectedValuePath="Tag" SelectedValue="{Binding Path=userOptions.OverlayValuesFontColor}" Margin="3,3,3,3" IsEnabled="False"/>
+                        <ComboBox x:Name="ValueColor_ComboBox" SelectedValuePath="Tag" DisplayMemberPath="Content" SelectionChanged="ValueColor_ComboBox_SelectionChanged" Margin="3,3,3,3" IsEnabled="False"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock MinWidth="70" Margin="3,3,3,3" VerticalAlignment="Center" Text="{DynamicResource textblock_font_size}"/>
