--- a/DakkaDataLink/Rescources/English.xaml
+++ b/DakkaDataLink/Rescources/English.xaml
@@ -39,8 +39,8 @@
 
     <!--<system:String x:Key="timeString">Time</system:String>                                 -->
     <!--<system:String x:Key="nameString">Name</system:String>                                 -->
-    <!--<system:String x:Key="previousCoordinatesString">Previous Coordinates</system:String>  -->
-    <!--<system:String x:Key="savedCoordinatesString">Saved Coordinates</system:String>        -->
+    <system:String x:Key="previous_coordinates_text">Previous Coordinates</system:String>
+    <system:String x:Key="saved_coordinates_text">Saved Coordinates</system:String>        
 
     <!--Connections-->
     <system:String x:Key="groupbox_connection_header">Connection Settings</system:String>
