--- a/DakkaDataLink/Rescources/German.xaml
+++ b/DakkaDataLink/Rescources/German.xaml
@@ -29,8 +29,8 @@
     <system:String x:Key="textblock_distance">Dist:</system:String>
     <system:String x:Key="textblock_tooltip_distance">Entfernung</system:String>
     <system:String x:Key="groupbox_coordinates_header">Schusskoordinaten</system:String>
-    <!-- <system:String x:Key="previous_coordinates_text">Vorherige Koordinaten</system:String> -->
-    <!-- <system:String x:Key="saved_coordinates_text">Gespeicherte Koordinaten</system:String> -->
+    <system:String x:Key="previous_coordinates_text">Vorherige Koordinaten</system:String>
+    <system:String x:Key="saved_coordinates_text">Gespeicherte Koordinaten</system:String>
     <system:String x:Key="textbox_tooltip_distance">Rechte STRG + Pfeiltaste Oben/Unten für 1 tick Schritt. Recht Shift + Pfeiltaste Oben/Unten für 3 tick Schritt.</system:String>
     <system:String x:Key="textblock_azimuth">Az:</system:String>
     <system:String x:Key="textblock_tooltip_azimuth">Gradzahl</system:String>
