--- a/DakkaDataLink/Rescources/Spanish.xaml
+++ b/DakkaDataLink/Rescources/Spanish.xaml
@@ -26,8 +26,8 @@
 
     <!--Gunner and Spotter-->
     <system:String x:Key="groupbox_coordinates_header">Coordenadas de disparo</system:String>
-    <!-- <system:String x:Key="previous_coordinates_text">*Previous Coordinates</system:String> -->
-    <!-- <system:String x:Key="saved_coordinates_text">*Saved Coordinates</system:String> -->
+    <system:String x:Key="previous_coordinates_text">*Previous Coordinates</system:String>
+    <system:String x:Key="saved_coordinates_text">*Saved Coordinates</system:String>
     <system:String x:Key="textblock_distance">Dist.:</system:String>
     <system:String x:Key="textblock_tooltip_distance">Distancia</system:String>
     <system:String x:Key="textbox_tooltip_distance">Ctrl derecho + Flecha arriba/abajo para un paso de 1 tick. Shift derecho + Flecha arriba/abajo para un paso de 3 ticks.</system:String>
